# GitPulse

./: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  lint-staged.config.js  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  playwright.smoke.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: concept.md  feature-roadmap.md  gitpulse_color_system.md  gitpulse_design_system.md  gitpulse_structure.md
pages/: index.html
scripts/: release.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/analysis/: cochange.rs  collaboration.rs  mod.rs  overview.rs  staleness.rs
src-tauri/src/commands/: analysis.rs  branch.rs  mod.rs  storage.rs  update.rs
src-tauri/src/git/: mod.rs  repository.rs
src-tauri/src/models/: cochange.rs  collaboration.rs  mod.rs  overview.rs  staleness.rs  storage.rs  update.rs
src-tauri/src/storage/: cache.rs  database.rs  log.rs
src-tauri/tests/unit/analysis/: cochange_tests.rs  collaboration_tests.rs  overview_tests.rs  staleness_tests.rs
src-tauri/tests/unit/commands/: branch_tests.rs
src-tauri/tests/unit/storage/: database_tests.rs  log_tests.rs
src/__tests__/: pages.test.tsx
src/features/: gitpulse-sample-data.ts
src/hooks/: useAnalysisPageContext.ts
src/i18n/: config.ts
src/lib/: analysis-helpers.ts  format.ts
(+112 files in other folders)
