[package]
name = "gitpulse"
version = "0.1.3"
description = "A desktop dashboard for Git history signals."
authors = ["GitPulse Contributors"]
edition = "2021"

[lib]
name = "gitpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_qualifications = "deny"
